[project]
name = "City Info"
version = "0.1.0"
description = "A Flet app to display publicly available City Hall information from Perpheads."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "PrivateMe", email = "you@example.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "io.github.privatedev11.cityhall"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "City Info"

# company name to display in about app dialogs
company = "PrivateMe"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 PrivateMe"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}